--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.3",
+    "typescript": "5.1.6",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
